--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </menu>
         </header>
         <main>
+            <p id="info"></p>
             <input type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
             <p id="search-lil-text">поиск реализован через <a href="https://www.fusejs.io/"><img src="https://www.fusejs.io/assets/img/logo.png" width="16" height="16"> fuse.js</a></p>
             <table id="main"></table>
