fix safari thing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>архив стримов олёши</title>
 </head>
 <body>
-    <video src="assets/yter-purple2.mp4" loop autoplay muted class="bg"></video>
+    <video src="assets/yter-purple2.mp4" loop autoplay muted playsinline class="bg"></video>
     <div class="wrapper">
         <header>
             <p class="header-logo">архив стримов олёши</p>
