add spisok reversing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <p id="info"></p>
             <input type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
-            <p id="search-lil-text">поиск реализован через <a href="https://www.fusejs.io/"><img src="https://www.fusejs.io/assets/img/logo.png" width="16" height="16"> fuse.js</a></p>
+            <p id="search-lil-text"><span>поиск реализован через <a href="https://www.fusejs.io/"><img src="https://www.fusejs.io/assets/img/logo.png" width="16" height="16"> fuse.js</a></span><span><a href="javascript:void" onclick="reverse()">развернуть список</a></span></p>
             <table id="main"></table>
         </main>
     </div>
