--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <div class="warn">
                 <h3>лёха забанен. будущее неизвестно.</h3>
-                <p>некоторые стримы не залиты и неизвестно будут ли, так как лёха улетел в пермач. они добавлены как заглушки, но не более</p>
+                <p><s>некоторые стримы не залиты и неизвестно будут ли, так как лёха улетел в пермач. они добавлены как заглушки, но не более</s><br>всё было залито</p>
             </div>
             <p id="info"></p>
             <input type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
