--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <p class="header-logo">архив стримов олёши</p>
             <menu class="header-menu">
-                <li><a href="https://t.me/oleshavods">телеграм канал</a></li>
+                <li><a href="" id="tglink">телеграм канал</a></li>
             </menu>
         </header>
         <main>
