--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </menu>
         </header>
         <main>
-            <div class="warn">
+            <!--<div class="warn">
                 <h3>лёха забанен. будущее неизвестно.</h3>
                 <p><s>некоторые стримы не залиты и неизвестно будут ли, так как лёха улетел в пермач. они добавлены как заглушки, но не более</s><br>всё было залито</p>
-            </div>
+            </div>-->
             <p id="info"></p>
             <input type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
             <p id="search-lil-text"><span>поиск реализован через <a href="https://www.fusejs.io/"><img src="https://www.fusejs.io/assets/img/logo.png" width="16" height="16"> fuse.js</a></span><span><a href="javascript:void" onclick="reverse()">развернуть список</a></span></p>
