--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <p><s>некоторые стримы не залиты и неизвестно будут ли, так как лёха улетел в пермач. они добавлены как заглушки, но не более</s><br>всё было залито</p>
             </div>-->
             <p id="info"></p>
-            <input type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
+            <input title="подсказки по поиску:
+текст - не сортированый нечёткий поиск по тексту
+#тег - сортированый поиск по конкретному тегу
+?категория - сортированый поиск по конкретной игре/категории" type="text" id="search" oninput="search();" placeholder="название стрима, дата, игра...">
             <p id="search-lil-text"><span>поиск реализован через <a href="https://www.fusejs.io/"><img src="https://www.fusejs.io/assets/img/logo.png" width="16" height="16"> fuse.js</a></span><span><a href="javascript:void" onclick="reverse()">развернуть список</a></span></p>
             <table id="main"></table>
         </main>
