--- a/guide/index.html
+++ b/guide/index.html
@@ -221,8 +221,9 @@
     <p>
       спасибо всем за поддержку на всём пути oleshavods. без вас я не знаю что бы делал.<br>
       если что то непонятно - не стесняйтесь писать мне в телегу (пока нема, жду номер)<br>
-      если действительно будете заливать стримы, начинайте с тех что я не залил последними<br>
-      
+      если действительно будете заливать стримы, начинайте с тех что я не залил последними, чтобы сохранить целостноть архива<br>
+      а еще если будете что то заливать, можете мне скинуть, мы порекламим, могу даже дать пару советов если чо, да и мне самому просто интересно :)<br>
+      спасибо всем кто решит продолжить моё дело, это правда много для меня значит
     </p>
   </body>
 </html>
