--- a/guide/index.html
+++ b/guide/index.html
@@ -73,7 +73,7 @@
           <li>
             <h3>скачать TwitchDownloader</h3>
             <p>водтулу нужна эта программа для скачивания записей чата стримов<br>
-            переходим на <a href="https://github.com/lay295/TwitchDownloader/releases/latest">ласт релиз</a> и скачиваем <code>TwitchDownloaderCLI-XXX-Windows-x64</code> <strong>(важно: именно CLI верися)</strong><br>
+            переходим на <a href="https://github.com/lay295/TwitchDownloader/releases/latest">ласт релиз</a> и скачиваем <code>TwitchDownloaderCLI-XXX-Windows-x64</code> <strong>(важно: именно CLI версия)</strong><br>
             распаковывает архив, <strong>&lt;!&gt;</strong> переименовываем в <code>ttvdl.exe</code> и копируем рядом с экзешкой водтула</p>
           </li>
           <li>
